# semenov-221-3210-crypt

lab1/: CMakeLists.txt  listitem.cpp  listitem.h  listitem.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  modalwindow.cpp  modalwindow.h  modalwindow.ui  resource.qrc
lab1/json/: cridentials.json  cridentials_encrypted.json  cridentials_to_encrypt.json
lab2/SimpleReadWrite/SimpleReadWrite/x64/Debug/: SimpleReadWrite.exe.recipe  SimpleReadWrite.ilk  vc143.idb
lab2/SimpleReadWrite/SimpleReadWrite/x64/Release/: SimpleReadWrite.exe.recipe  SimpleReadWrite.iobj  SimpleReadWrite.ipdb
lab2/passThrough/: RCb01236  passThrough.c  passThrough.vcxproj  passThrough.vcxproj.Filters  а.txt
lab2/passThrough/x64/Debug/: passThrough.cer  passThrough.inf  passThrough.sys.recipe  passThrough.vcxproj.FileListAbsolute.txt
lab2/passThrough/x64/Debug/passThrough/: passThrough.sys  passthrough.cat
lab2/passThrough/x64/Debug/passThrough.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Inf2Cat.command.1.tlog  inf2cat-expand.12128.read.1.tlog  inf2cat-expand.12128.write.1.tlog  inf2cat-expand.read.1.tlog  inf2cat-expand.write.1.tlog  inf2cat.read.1.tlog  inf2cat.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  passThrough.lastbuildstate  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  signtool.command.1.tlog  signtool.read.1.tlog  signtool.timestamp.1.tlog  signtool.write.1.tlog  stampinf.command.1.tlog  stampinf.write.1.tlog
lab2/passThrough/x64/Release/: passThrough.res  passThrough.sys  passThrough.sys.recipe  passThrough.vcxproj.FileListAbsolute.txt
lab2/passThrough/x64/Release/passThrough.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Inf2Cat.command.1.tlog  inf2cat-expand.10736.write.1.tlog  inf2cat-expand.12736.read.1.tlog  inf2cat-expand.164.write.1.tlog  inf2cat-expand.2604.write.1.tlog  inf2cat-expand.2776.read.1.tlog  inf2cat-expand.2776.write.1.tlog  inf2cat-expand.4236.write.1.tlog  inf2cat-expand.4248.read.1.tlog  inf2cat-expand.4716.write.1.tlog  inf2cat-expand.6632.read.1.tlog  inf2cat-expand.6632.write.1.tlog  inf2cat-expand.836.write.1.tlog  inf2cat-expand.8700.write.1.tlog  inf2cat-expand.9256.write.1.tlog  inf2cat-expand.read.1.tlog  inf2cat-expand.write.1.tlog  inf2cat.read.1.tlog  inf2cat.write.1.tlog  link.command.1.tlog  rc.read.1.tlog  (+12 more)
(+20 files in other folders)
